--- a/package.json
+++ b/package.json
@@ -13,11 +13,18 @@
     "@types/node": "18.11.18",
     "@types/react": "18.0.26",
     "@types/react-dom": "18.0.10",
-    "eslint": "8.30.0",
-    "eslint-config-next": "13.1.1",
+    "axios": "^1.2.1",
     "next": "13.1.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "recoil": "^0.7.6",
     "typescript": "4.9.4"
+  },
+  "devDependencies": {
+    "@types/styled-components": "^5.1.26",
+    "eslint": "^8.30.0",
+    "eslint-config-next": "^13.1.1",
+    "prettier": "^2.8.1",
+    "styled-components": "^5.3.6"
   }
 }
