feat/main: 폴더 구조 세팅

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,11 +15,10 @@
     "noEmit": false,
     "jsx": "react-jsx",
     "baseUrl": ".",
-    "paths": {
-      "@/*": ["src/*"]
-    }
+    "incremental": true,
+    "isolatedModules": true
   },
   "files": ["svg.d.ts"],
-  "include": ["src"],
+  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx"],
   "exclude": ["build", "node_modules"]
 }
