feat/#1: ErrorBoundary 세팅

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -30,6 +30,7 @@
     "jest": true
   },
   "rules": {
+    // "prettier/prettier": ["error", { "endOfLine": "LF" }],
     "react-hooks/rules-of-hooks": "error",
     "react-hooks/exhaustive-deps": "warn",
     "simple-import-sort/imports": "warn",
