feat/#3: GlobalStyle 적용 및 login 페이지 생성
- GlobalStyle.tsx 파일 생성해서 globals.css 내용을 옮김
- globals.css 파일 삭제
- pages/login, components/login 폴더 생성

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,11 @@
 {
   "compilerOptions": {
     "target": "es5",
-    "lib": ["dom", "dom.iterable", "esnext"],
+    "lib": [
+      "dom",
+      "dom.iterable",
+      "esnext"
+    ],
     "allowJs": true,
     "skipLibCheck": true,
     "esModuleInterop": true,
@@ -13,12 +17,21 @@
     "moduleResolution": "node",
     "resolveJsonModule": true,
     "noEmit": false,
-    "jsx": "react-jsx",
+    "jsx": "preserve",
     "baseUrl": ".",
     "incremental": true,
     "isolatedModules": true
   },
-  "files": ["svg.d.ts"],
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx"],
-  "exclude": ["build", "node_modules"]
+  "files": [
+    "svg.d.ts"
+  ],
+  "include": [
+    "next-env.d.ts",
+    "**/*.ts",
+    "**/*.tsx"
+  ],
+  "exclude": [
+    "build",
+    "node_modules"
+  ]
 }
