--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "recoil": "^0.7.6",
+    "styled-reset": "^4.4.4",
     "typescript": "4.9.4"
   },
   "devDependencies": {
