--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@next/font": "13.1.1",
     "@react-oauth/google": "^0.5.1",
+    "@types/js-cookie": "^3.0.2",
     "@types/node": "18.11.18",
     "@types/react": "18.0.26",
     "@types/react-dom": "18.0.10",
@@ -37,6 +38,7 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-simple-import-sort": "^8.0.0",
     "husky": "^8.0.2",
+    "js-cookie": "^3.0.1",
     "lint-staged": "^13.1.0",
     "prettier": "^2.8.1",
     "react-error-boundary": "^3.1.4",
