--- a/package.json
+++ b/package.json
@@ -16,12 +16,14 @@
     "@types/node": "18.11.18",
     "@types/react": "18.0.26",
     "@types/react-dom": "18.0.10",
+    "@types/react-responsive": "^8.0.5",
     "axios": "^1.2.1",
     "lottie-react": "^2.3.1",
     "next": "13.1.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.41.5",
+    "react-responsive": "^9.0.2",
     "recoil": "^0.7.6",
     "styled-reset": "^4.4.4",
     "typescript": "4.9.4"
