--- a/package.json
+++ b/package.json
@@ -24,11 +24,13 @@
     "react-dom": "18.2.0",
     "react-hook-form": "^7.41.5",
     "react-responsive": "^9.0.2",
+    "react-scroll": "^1.8.9",
     "recoil": "^0.7.6",
     "styled-reset": "^4.4.4",
     "typescript": "4.9.4"
   },
   "devDependencies": {
+    "@types/react-scroll": "^1.8.6",
     "@types/styled-components": "^5.1.26",
     "@typescript-eslint/eslint-plugin": "^5.47.1",
     "@typescript-eslint/parser": "^5.47.1",
