--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "typescript": "4.9.4"
   },
   "devDependencies": {
+    "@types/gtag.js": "^0.0.12",
     "@types/react-scroll": "^1.8.6",
     "@types/styled-components": "^5.1.26",
     "@typescript-eslint/eslint-plugin": "^5.47.1",
