--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,6 +15,7 @@
     "noEmit": false,
     "jsx": "preserve",
     "baseUrl": ".",
+    "types": ["@types/gtag.js"],
     "paths": {
       "@/components/*": ["components/*"],
       "@/pages/*": ["pages/*"],
