--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "@types/styled-components": "^5.1.26",
     "@typescript-eslint/eslint-plugin": "^5.47.1",
     "@typescript-eslint/parser": "^5.47.1",
+    "babel-plugin-styled-components": "^2.0.7",
     "eslint": "^8.30.0",
     "eslint-config-next": "^13.1.1",
     "eslint-plugin-import": "^2.26.0",
