--- a/package.json
+++ b/package.json
@@ -10,27 +10,22 @@
     "prepare": "husky install"
   },
   "dependencies": {
-    "@next/font": "13.1.1",
     "@react-oauth/google": "^0.5.1",
-    "@types/js-cookie": "^3.0.2",
     "@types/node": "18.11.18",
     "@types/react": "18.0.26",
     "@types/react-dom": "18.0.10",
-    "@types/react-responsive": "^8.0.5",
     "axios": "^1.2.1",
-    "lottie-react": "^2.3.1",
     "next": "13.1.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-hook-form": "^7.41.5",
-    "react-responsive": "^9.0.2",
-    "react-scroll": "^1.8.9",
     "recoil": "^0.7.6",
     "styled-reset": "^4.4.4",
     "typescript": "4.9.4"
   },
   "devDependencies": {
+    "@next/font": "^13.2.1",
     "@types/gtag.js": "^0.0.12",
+    "@types/react-responsive": "^8.0.5",
     "@types/react-scroll": "^1.8.6",
     "@types/styled-components": "^5.1.26",
     "@typescript-eslint/eslint-plugin": "^5.47.1",
@@ -44,11 +39,14 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-simple-import-sort": "^8.0.0",
     "husky": "^8.0.2",
-    "js-cookie": "^3.0.1",
     "lint-staged": "^13.1.0",
+    "lottie-react": "^2.4.0",
     "prettier": "^2.8.1",
     "react-error-boundary": "^3.1.4",
+    "react-hook-form": "^7.43.2",
     "react-query": "^3.39.2",
+    "react-responsive": "^9.0.2",
+    "react-scroll": "^1.8.9",
     "recoil-persist": "^4.2.0",
     "styled-components": "^5.3.6"
   },
